# i2c_master

./: CMakeLists.txt  README.md  i2c_device.cpp  i2c_master.cpp  idf_component.yml  sdkconfig.defaults
examples/i2c_master_test/: .gitignore  CMakeLists.txt  sdkconfig.defaults
examples/i2c_master_test/main/: CMakeLists.txt  idf_component.yml  main.cpp
include/: i2c_device.hpp  i2c_master.hpp
